Initial cut at making a visible caret at the insertion point. Currently it's switched off by default, url query param of caret=on to switch it on. Needs a lot more testing but seems to work on desktop Chrome for very simple tests. A quick test on iOS reveals problems. Currently doesn't handle scrolling which may be the issue on iOS (or it may not).

--- a/quink/resources/css/quink.css
+++ b/quink/resources/css/quink.css
@@ -484,3 +484,18 @@ button {
 .qk_viewport_relative {
     position: absolute;
 }
+.qk_caret {
+    width: 0;
+    height: 0;
+    border-bottom: 5px solid transparent;  /* left arrow slant */
+    border-top: 5px solid transparent; /* right arrow slant */
+    border-left: 5px solid blue; /* bottom, add background color here */
+    font-size: 0;
+    line-height: 0;
+    position: absolute;
+    z-index: 0;
+    padding: 0;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+}
